--- a/app/app.json
+++ b/app/app.json
@@ -1,16 +1,22 @@
 {
   "expo": {
-    "name": "spriiint",
-    "slug": "spriiint",
-    "version": "0.0.7",
+    "name": "MIND",
+    "slug": "MIND",
+    "version": "0.0.8",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "spriiint",
+    "scheme": "mind",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "mindsgn.studio.spriiint"
+      "supportsTablet": false,
+      "buildNumber": "40",
+      "bundleIdentifier": "mindsgn.studio.spriiint",
+      "appleTeamId": "B3U8UM2966",
+      "infoPlist": {
+        "NSHealthShareUsageDescription": "We need access to save your workout data",
+        "NSHealthUpdateUsageDescription": "We need access to save your workout data"
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -22,10 +28,6 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "mindsgn.studio.spriiint"
-    },
-    "web": {
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       "expo-router",
@@ -51,7 +53,9 @@
             "useSQLCipher": false
           },
           "ios": {
-            "customBuildFlags": ["-DSQLITE_ENABLE_DBSTAT_VTAB=1 -DSQLITE_ENABLE_SNAPSHOT=1"]
+            "customBuildFlags": [
+              "-DSQLITE_ENABLE_DBSTAT_VTAB=1 -DSQLITE_ENABLE_SNAPSHOT=1"
+            ]
           }
         }
       ]
