--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "mind",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -11,41 +11,40 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/metro-config": "^54.0.6",
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@shopify/flash-list": "2.0.2",
     "babel-plugin-inline-import": "^3.0.0",
-    "drizzle-kit": "^0.31.5",
-    "drizzle-orm": "^0.44.6",
-    "expo": "~54.0.13",
-    "expo-constants": "~18.0.9",
-    "expo-drizzle-studio-plugin": "^0.2.1",
-    "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.11",
-    "expo-splash-screen": "~31.0.10",
-    "expo-sqlite": "~16.0.8",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.8",
+    "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.45.1",
+    "expo": "~54.0.29",
+    "expo-constants": "~18.0.12",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linking": "~8.0.10",
+    "expo-router": "~6.0.19",
+    "expo-splash-screen": "~31.0.12",
+    "expo-sqlite": "~16.0.10",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
